// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EVAL-007 > checks critical templates against terminal-noir baseline snapshot/assertion contract 1`] = `
{
  "root": {
    "background": "var(--bg)",
    "fontFamily": ""JetBrains Mono", "Share Tech Mono", monospace",
    "fontSize": "14px",
    "lineHeight": "1.7",
    "variables": {
      "--bg": "#0a0a0a",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
    },
  },
  "route": "/",
  "rules": {
    ".btnPrimary": {
      "background": "var(--green)",
      "clip-path": "polygon(8px 0%, 100% 0%, calc(100% - 8px) 100%, 0% 100%)",
      "color": "var(--bg)",
      "font-weight": "700",
    },
    ".heroName": {
      "color": "var(--white)",
      "font-size": "clamp(52px, 8vw, 96px)",
      "font-weight": "800",
      "letter-spacing": "-0.02em",
      "line-height": "0.95",
      "margin": "0 0 12px",
    },
    ".nav": {
      "align-items": "center",
      "background": "rgb(10 10 10 / 97%)",
      "border-bottom": "1px solid var(--border)",
      "display": "flex",
      "justify-content": "space-between",
      "left": "0",
      "padding": "16px 48px",
      "position": "fixed",
      "right": "0",
      "top": "0",
      "z-index": "80",
    },
    ".terminalNoir": {
      "--bg": "#0a0a0a",
      "--bg2": "#0f0f0f",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--dim": "#8a8a8a",
      "--glow-cyan": "0 0 10px #00d4ff66, 0 0 30px #00d4ff22",
      "--glow-green": "0 0 10px #00ff4166, 0 0 30px #00ff4122",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
      "background-color": "var(--bg)",
      "background-image": "repeating-linear-gradient( 0deg, transparent, transparent 2px, rgb(0 0 0 / 12%) 2px, rgb(0 0 0 / 12%) 4px ), linear-gradient(rgb(0 255 65 / 3%) 1px, transparent 1px), linear-gradient(90deg, rgb(0 255 65 / 3%) 1px, transparent 1px)",
      "background-size": "auto, 40px 40px, 40px 40px",
      "color": "var(--white)",
      "font-family": ""JetBrains Mono", "Share Tech Mono", monospace",
      "font-size": "14px",
      "isolation": "isolate",
      "line-height": "1.7",
      "min-height": "100vh",
      "overflow-x": "hidden",
      "position": "relative",
    },
  },
  "testId": "terminal-noir-home",
}
`;

exports[`EVAL-007 > checks critical templates against terminal-noir baseline snapshot/assertion contract 2`] = `
{
  "root": {
    "background": "var(--bg)",
    "fontFamily": ""JetBrains Mono", "Share Tech Mono", monospace",
    "fontSize": undefined,
    "lineHeight": undefined,
    "variables": {
      "--bg": "#0a0a0a",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
    },
  },
  "route": "/projects/[slug]",
  "rules": {
    ".hero": {
      "align-items": "stretch",
      "background": "rgb(15 15 15 / 94%)",
      "border": "1px solid var(--border)",
      "display": "grid",
      "gap": "24px",
      "grid-template-columns": "minmax(0, 1fr) 280px",
      "padding": "32px",
    },
    ".projectPage": {
      "--bg": "#0a0a0a",
      "--bg2": "#0f0f0f",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--dim": "#8a8a8a",
      "--glow-cyan": "0 0 10px #00d4ff66, 0 0 30px #00d4ff22",
      "--glow-green": "0 0 10px #00ff4166, 0 0 30px #00ff4122",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
      "background-color": "var(--bg)",
      "background-image": "repeating-linear-gradient( 0deg, transparent, transparent 2px, rgb(0 0 0 / 12%) 2px, rgb(0 0 0 / 12%) 4px ), linear-gradient(rgb(0 255 65 / 3%) 1px, transparent 1px), linear-gradient(90deg, rgb(0 255 65 / 3%) 1px, transparent 1px)",
      "background-size": "auto, 40px 40px, 40px 40px",
      "color": "var(--white)",
      "font-family": ""JetBrains Mono", "Share Tech Mono", monospace",
      "isolation": "isolate",
      "min-height": "100vh",
      "padding": "88px 40px 80px",
    },
    ".title": {
      "font-size": "clamp(34px, 6vw, 64px)",
      "line-height": "0.98",
      "margin": "0",
    },
  },
  "testId": "terminal-noir-project",
}
`;

exports[`EVAL-007 > checks critical templates against terminal-noir baseline snapshot/assertion contract 3`] = `
{
  "root": {
    "background": "var(--bg)",
    "fontFamily": ""JetBrains Mono", "Share Tech Mono", monospace",
    "fontSize": undefined,
    "lineHeight": undefined,
    "variables": {
      "--bg": "#0a0a0a",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
    },
  },
  "route": "/writing",
  "rules": {
    ".card": {
      "display": "grid",
      "gap": "18px",
      "grid-template-columns": "minmax(0, 1fr) 180px",
      "overflow": "hidden",
      "padding": "22px",
      "position": "relative",
    },
    ".layout": {
      "display": "grid",
      "gap": "24px",
      "grid-template-columns": "280px minmax(0, 1fr)",
      "margin-top": "24px",
    },
    ".writingIndex": {
      "--bg": "#0a0a0a",
      "--bg2": "#111",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--dim": "#8a8a8a",
      "--glow-green": "0 0 10px #00ff4166",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
      "background-color": "var(--bg)",
      "background-image": "repeating-linear-gradient( 0deg, transparent, transparent 2px, rgb(0 0 0 / 12%) 2px, rgb(0 0 0 / 12%) 4px ), linear-gradient(rgb(0 255 65 / 3%) 1px, transparent 1px), linear-gradient(90deg, rgb(0 255 65 / 3%) 1px, transparent 1px)",
      "background-size": "auto, 40px 40px, 40px 40px",
      "color": "var(--white)",
      "font-family": ""JetBrains Mono", "Share Tech Mono", monospace",
      "isolation": "isolate",
      "min-height": "100vh",
      "padding": "88px 40px 80px",
    },
  },
  "testId": "terminal-noir-writing-index",
}
`;

exports[`EVAL-007 > checks critical templates against terminal-noir baseline snapshot/assertion contract 4`] = `
{
  "root": {
    "background": "var(--bg)",
    "fontFamily": ""JetBrains Mono", "Share Tech Mono", monospace",
    "fontSize": undefined,
    "lineHeight": undefined,
    "variables": {
      "--bg": "#0a0a0a",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
    },
  },
  "route": "/writing/[slug]",
  "rules": {
    ".body p": {
      "color": "#c8c8c8",
      "font-size": "13px",
      "line-height": "2",
      "margin": "0",
    },
    ".hero": {
      "align-items": "stretch",
      "background": "rgb(15 15 15 / 94%)",
      "border": "1px solid var(--border)",
      "display": "grid",
      "gap": "24px",
      "grid-template-columns": "minmax(0, 1fr) 280px",
      "padding": "32px",
    },
    ".title": {
      "font-size": "clamp(34px, 6vw, 64px)",
      "line-height": "0.98",
      "margin": "0",
    },
    ".writingPage": {
      "--bg": "#0a0a0a",
      "--bg2": "#111",
      "--border": "#1a1a1a",
      "--cyan": "#00d4ff",
      "--dim": "#8a8a8a",
      "--glow-cyan": "0 0 10px #00d4ff66",
      "--glow-green": "0 0 10px #00ff4166",
      "--green": "#00ff41",
      "--white": "#e8e8e8",
      "background-color": "var(--bg)",
      "background-image": "repeating-linear-gradient( 0deg, transparent, transparent 2px, rgb(0 0 0 / 12%) 2px, rgb(0 0 0 / 12%) 4px ), linear-gradient(rgb(0 255 65 / 3%) 1px, transparent 1px), linear-gradient(90deg, rgb(0 255 65 / 3%) 1px, transparent 1px)",
      "background-size": "auto, 40px 40px, 40px 40px",
      "color": "var(--white)",
      "font-family": ""JetBrains Mono", "Share Tech Mono", monospace",
      "isolation": "isolate",
      "min-height": "100vh",
      "padding": "88px 40px 80px",
    },
  },
  "testId": "terminal-noir-writing",
}
`;
